1999-08-04  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* boot.c (load_image): Fix a strcmp test. Reported by Pavel
	Roskin <pavel_roskin@geocities.com>.
	
1999-08-03  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	From "Dan J. Walters" <djw@cs.utexas.edu>:
	* stage2/i386-elf.h (EI_BRAND): New macro.
	* stage2/boot.c (load_image): If the kernel is ELF, check if it
	is a FreeBSD kernel as well as a Multiboot kernel, and if it is 
	a FreeBSD kernel, then mask ENTRY_ADDR since FreeBSD requires
	that. Likewise, mask MEMADDR.
	(bsd_boot): Set the bi_symtab and the bi_esymtab members of BI
	only if MBI.FLAGS has the flag MB_INFO_AOUT_SYMS. Otherwise,
	clear them.
	
1999-07-30  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	From Pavel Roskin <pavel_roskin@geocities.com>:
	* grub/getopt.c: New file. Copied from texinfo-3.12n.
	* grub/getopt1.c: Likewise.
	* grub/getopt.h: Likewise.
	* grub/Makefile.am (grub_SOURCES): Added getopt.c, getopt1.c and
	getopt.h.
	* configure.in: Check for string.h and strings.h.
	* grub/asmstub.c (grub_stage2): Fix a misordering in the output
	format of the inline assembly.
	
1999-07-30  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	From Pavel Roskin <pavel_roskin@geocities.com>:
	* stage2/asm.S (get_diskinfo_standard): If the number of sectors
	returned is zero, then return an error code, even if non-carrier.
	
1999-07-15  Gordon Matzigkeit  <gord@zen.fig.org>

	* docs/Makefile.am (grub.info): Use an ugly hack to downgrade
 	grub.texi so that it works with Debian's version of texinfo.

1999-07-26  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/bios.c (get_diskinfo): When DRIVE is a floppy drive,
	try standard probe routine at first. Reported by Peter Astrand
	<altic@lysator.liu.se>.

	* grub/main.c (main): Call printf instead of grub_printf.
	Reported by Klaus Reichl <a8709182@unet.univie.ac.at>.
	
1999-07-15  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/cmdline.c (skip_to): Don't increase CMDLINE if the